	- Fixed: Base server vhost prefix not updated when disabling SSL (panel)
	- Fixed: Unable to setup SSL without CA bundle (panel)

GUI:
	- Added: Event Manager - Method allowing to unregister any listener which listen to a particular event
	- Fixed: Plugin items with errors must be shown in debugger and the admin must be able to change their status
	- Removed: Domain name related parameters

Tickets:
	- Fixed #447: Defect - External mail server feature is broken, when mail account limit is set to -1 (reopened)
	- Fixed #945: Bug - impossible to create top-level-domains .рф (russian federation zone)

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc4.4
------------------------------------------------------------------------------------------------------------------------

2013-10-22: Laurent Declercq
	- RELEASE i-MSCP 1.1.0-rc4.4

ENGINE:
	- Fixed: Can't use an undefined value as a HASH reference...

GUI:
	- Added: Option allowing to set Email quota synchronization mode
	- Added: Per plugin router support
	- Fixed: Do not show any quota information for mailboxes which have the quota limit set to 0 (unlimited)
	- Fixed: Unable to edit domain (admin level)

Tickets:
	- Fixed #938: Bug - Ftp - Login as link is missing
	- Fixed #942: Bug - Mailboxes quota synchronization is broken

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc4.3
------------------------------------------------------------------------------------------------------------------------

2013-10-17: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc4.3

ADDONS:
	- Fixed: Net2ftp addon installer is broken

DOCS:
	- Fixed: Preseed template file is broken (compile time error)

ENGINE:
	- Removed: Backtrace routines, which cause segfault on Debian Jessie (issues with Carp package)

SETUP:
	- Fixed: ispCP migration script is broken (many compile time errors)